[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["devkaspee <kaspee@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
